# Simulations

./: CMakeLists.txt  README.md  kinematic.cpp  kinematic.hpp  main.hpp  toolpath.cpp  toolpath.hpp
cad/: cad.cpp  cad.hpp  parser.cpp  tessellator.cpp
include/: cad.hpp  main.hpp  ppi.hpp
kinematic/: kinematic.cpp  kinematic.hpp
ppi/: ppi.cpp  ppi.hpp
soup/: soup.cpp  soup.hpp
src/: cad.cpp  soup.cpp
toolpath/: toolpath.hpp
